--- a/UWP_FullTrust_1/FullTrust/FullTrust.csproj
+++ b/UWP_FullTrust_1/FullTrust/FullTrust.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\Microsoft.Net.Native.SharedLibrary-arm.2.0.3\build\Microsoft.Net.Native.SharedLibrary-arm.props" Condition="Exists('..\packages\Microsoft.Net.Native.SharedLibrary-arm.2.0.3\build\Microsoft.Net.Native.SharedLibrary-arm.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -11,6 +12,8 @@
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -47,6 +50,19 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Model.h5" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Loader.py" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Microsoft.Net.Native.SharedLibrary-arm.2.0.3\build\Microsoft.Net.Native.SharedLibrary-arm.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Net.Native.SharedLibrary-arm.2.0.3\build\Microsoft.Net.Native.SharedLibrary-arm.props'))" />
+    <Error Condition="!Exists('..\packages\Microsoft.Net.Native.SharedLibrary-arm.2.0.3\build\Microsoft.Net.Native.SharedLibrary-arm.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Net.Native.SharedLibrary-arm.2.0.3\build\Microsoft.Net.Native.SharedLibrary-arm.targets'))" />
+  </Target>
+  <Import Project="..\packages\Microsoft.Net.Native.SharedLibrary-arm.2.0.3\build\Microsoft.Net.Native.SharedLibrary-arm.targets" Condition="Exists('..\packages\Microsoft.Net.Native.SharedLibrary-arm.2.0.3\build\Microsoft.Net.Native.SharedLibrary-arm.targets')" />
 </Project>
