--- a/UWP_FullTrust_1/HateSpeechDetector.Core/HateSpeechDetector.Core.csproj
+++ b/UWP_FullTrust_1/HateSpeechDetector.Core/HateSpeechDetector.Core.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
    <ItemGroup>
+     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.2" />
      <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
    </ItemGroup>
 </Project>
