--- a/UWP_FullTrust_1/FullTrust/packages.config
+++ b/UWP_FullTrust_1/FullTrust/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DynamicLanguageRuntime" version="1.2.2" targetFramework="net461" />
+  <package id="IronPython" version="2.7.9" targetFramework="net461" />
   <package id="Microsoft.Net.Native.SharedLibrary-arm" version="2.0.3" targetFramework="net461" developmentDependency="true" />
 </packages>
